# RAG

./: README.md  docker-compose.yml
.devcontainer/backend/: devcontainer.json
backend/: .env.example  Dockerfile  init-ollama note.md  pyproject.toml  rag.ipynb  test.ipynb
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  files.py  ollama.py
backend/app/helpers/: __init__.py
backend/app/helpers/chat/: chat.py
backend/app/helpers/embeding/: embeding.py
backend/app/helpers/ollama/: ollama_details.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/apitesting/: page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/file/: page.tsx
frontend/app/components/: ChatMessage.tsx  app-sidebar.tsx  filecard.tsx
frontend/lib/: api-helpers.ts
